--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@splidejs/splide": "^4.1.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.3",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
